--- a/package.json
+++ b/package.json
@@ -8,11 +8,16 @@
     "eject": "expo eject"
   },
   "dependencies": {
+    "@expo-google-fonts/autour-one": "^0.1.0",
+    "@expo-google-fonts/nanum-myeongjo": "^0.1.0",
+    "@expo-google-fonts/nanum-pen-script": "^0.1.0",
+    "@expo-google-fonts/patrick-hand": "^0.1.0",
     "@expo/vector-icons": "^10.2.1",
     "@react-native-community/masked-view": "0.1.10",
     "@react-navigation/native": "^5.8.10",
     "@react-navigation/stack": "^5.12.8",
     "expo": "~39.0.2",
+    "expo-font": "~8.3.0",
     "expo-linear-gradient": "~8.3.0",
     "expo-status-bar": "~1.0.2",
     "react": "16.13.1",
